# vintage-story-mod-loader

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  overlay.nix
.github/workflows/: build-app.yml  deploy-docs.yml  nix-build.yml  test.yml
docs/: designer-guide.md  faq.md  index.md  package-lock.json  package.json  user-guide.md
docs/.vitepress/: config.ts
examples/: README.md  example-mod-pack.json
mod-loader/: index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
mod-loader/scripts/: generate-icon.js
mod-loader/src/: App.tsx  styles.css
mod-loader/src-tauri/: Cargo.toml  tauri.conf.json
mod-loader/src-tauri/capabilities/: main.json
mod-loader/src-tauri/src/: api_client.rs  config.rs  game_detector.rs  main.rs  mod_manager.rs  mod_pack.rs  mod_pack_manager.rs  mod_status.rs  mod_submission.rs
mod-loader/src-tauri/tests/: mod_status.rs
mod-loader/src/components/: ConfigEditor.tsx  ModBrowser.tsx  ModList.tsx  ModPackCreator.tsx  ModPackEditor.tsx  ModPackImporter.tsx  ModPackProgressBar.tsx  ModPacksList.tsx  Settings.tsx  Toast.tsx
mod-loader/src/contexts/: ModListContext.tsx  ModPackApplicationContext.tsx
mod-loader/src/services/: api.ts  modpack.ts  storage.ts
mod-loader/src/types/: mod.ts
mod-loader/tests/: IMPLEMENTATION_SUMMARY.md
mod-loader/tests/e2e/: basic.spec.ts  error-handling.spec.ts  mod-pack-management.spec.ts
mod-loader/tests/integration/: api-modpack-integration.test.ts  edge-cases.test.ts  modpack-workflow.test.ts  quiversandsheaths-dependency.test.ts
mod-loader/tests/unit/: setup.ts  test-utils.tsx
mod-loader/tests/unit/components/: ModPackCreator.test.tsx  ModPackImporter.test.tsx  ModPackProgressBar.test.tsx  Toast.test.tsx
mod-loader/tests/unit/contexts/: ModPackApplicationContext.test.tsx
mod-loader/tests/unit/services/: api.test.ts  modpack.test.ts  storage.test.ts
nix/: README.md  default.nix
