[package]
name = "vintage-story-mod-loader"
version = "0.1.0"
description = "Vintage Story Mod Loader"
authors = ["PrestonHager"]
license = "GPL-3.0"
repository = "https://github.com/PrestonHager/vintage-story-mod-loader"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
zip = "0.6"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
